// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search in RTL renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="headlessui-portal-root"
    >
      <div
        data-headlessui-portal=""
      />
    </div>
    <div>
      <div
        dir="rtl"
      >
        <div
          class="w-full xl:mx-32"
        >
          <div>
            <div
              class="relative w-full h-full bg-gohan flex flex-col divide-y dark:divide-beerus rounded-t-moon-s-sm"
            >
              <div
                class="flex items-center space-x-1.5 pl-3 moon-search-input"
              >
                <svg
                  class="w-6 h-6 pointer-events-none text-bulma"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M25 25l-4.413-4.405m0 0A7.962 7.962 0 109.336 9.327a7.962 7.962 0 0011.251 11.268z"
                    stroke="currentColor"
                    stroke-linecap="round"
                  />
                </svg>
                <div
                  class="flex-1 relative"
                >
                  <input
                    class="py-2 px-0 border-0 w-full focus:outline-none focus:border-0 focus:ring-0 bg-transparent placeholder-bulma text-bulma"
                    id="moon-search-input"
                    placeholder="Search"
                    spellcheck="false"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="absolute z-1 top-10 w-full flex-1 focus:outline-none p-2 space-y-4 bg-gohan shadow-moon-md moon-search-list rounded-b-moon-s-sm ease-out duration-300 opacity-0 scale-95"
                tabindex="-1"
              >
                <ul
                  class="min-w-full space-y-1"
                  tabindex="-1"
                >
                  <li>
                    <h5
                      class="text-bulma text-sm font-medium px-2 py-1"
                    >
                      Home
                    </h5>
                    <button
                      aria-disabled="false"
                      class="moon-search-list-item w-full"
                      data-close-on-select="true"
                    >
                      <a
                        href="#home"
                      >
                        <button
                          class="flex gap-2 justify-between items-center p-2 rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full bg-bulma/[0.04]"
                          type="button"
                        >
                          <span
                            class="block grow text-start text-bulma overflow-hidden"
                          >
                            Home
                          </span>
                          <span
                            class="text-moon-12 text-trunks"
                          >
                            #home
                          </span>
                        </button>
                      </a>
                    </button>
                    <button
                      aria-disabled="false"
                      class="moon-search-list-item w-full"
                      data-close-on-select="true"
                    >
                      <a
                        href="#settings"
                      >
                        <button
                          class="flex gap-2 justify-between items-center p-2 bg-transparent rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full"
                          type="button"
                        >
                          <span
                            class="block grow text-start text-bulma overflow-hidden"
                          >
                            Settings
                          </span>
                          <span
                            class="text-moon-12 text-trunks"
                          >
                            #settings
                          </span>
                        </button>
                      </a>
                    </button>
                    <button
                      aria-disabled="false"
                      class="moon-search-list-item w-full"
                      data-close-on-select="false"
                    >
                      <button
                        class="flex gap-2 justify-between items-center p-2 bg-transparent rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full"
                        type="button"
                      >
                        <span
                          class="block grow text-start text-bulma overflow-hidden"
                        >
                          Projects
                        </span>
                        <span
                          class="text-moon-12 text-trunks"
                        >
                          Action
                        </span>
                      </button>
                    </button>
                  </li>
                </ul>
                <ul
                  class="min-w-full space-y-1"
                  tabindex="-1"
                >
                  <li>
                    <h5
                      class="text-bulma text-sm font-medium px-2 py-1"
                    >
                      Other
                    </h5>
                    <button
                      aria-disabled="false"
                      class="moon-search-list-item w-full"
                      data-close-on-select="true"
                    >
                      <a
                        href="#developer-settings"
                      >
                        <button
                          class="flex gap-2 justify-between items-center p-2 bg-transparent rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full"
                          type="button"
                        >
                          <span
                            class="block grow text-start text-bulma overflow-hidden"
                          >
                            Developer settings
                          </span>
                          <span
                            class="text-moon-12 text-trunks"
                          >
                            #developer-settings
                          </span>
                        </button>
                      </a>
                    </button>
                    <button
                      aria-disabled="false"
                      class="moon-search-list-item w-full"
                      data-close-on-select="true"
                    >
                      <a
                        href="#privacy-policy"
                      >
                        <button
                          class="flex gap-2 justify-between items-center p-2 bg-transparent rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full"
                          type="button"
                        >
                          <span
                            class="block grow text-start text-bulma overflow-hidden"
                          >
                            Privacy policy
                          </span>
                          <span
                            class="text-moon-12 text-trunks"
                          >
                            #privacy-policy
                          </span>
                        </button>
                      </a>
                    </button>
                    <button
                      aria-disabled="false"
                      class="moon-search-list-item w-full"
                      data-close-on-select="true"
                    >
                      <button
                        class="flex gap-2 justify-between items-center p-2 bg-transparent rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full"
                        type="button"
                      >
                        <span
                          class="block grow text-start text-bulma overflow-hidden"
                        >
                          Log out
                        </span>
                        <span
                          class="text-moon-12 text-trunks"
                        >
                          Action
                        </span>
                      </button>
                    </button>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        class="w-full xl:mx-32"
      >
        <div>
          <div
            class="relative w-full h-full bg-gohan flex flex-col divide-y dark:divide-beerus rounded-t-moon-s-sm"
          >
            <div
              class="flex items-center space-x-1.5 pl-3 moon-search-input"
            >
              <svg
                class="w-6 h-6 pointer-events-none text-bulma"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M25 25l-4.413-4.405m0 0A7.962 7.962 0 109.336 9.327a7.962 7.962 0 0011.251 11.268z"
                  stroke="currentColor"
                  stroke-linecap="round"
                />
              </svg>
              <div
                class="flex-1 relative"
              >
                <input
                  class="py-2 px-0 border-0 w-full focus:outline-none focus:border-0 focus:ring-0 bg-transparent placeholder-bulma text-bulma"
                  id="moon-search-input"
                  placeholder="Search"
                  spellcheck="false"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="absolute z-1 top-10 w-full flex-1 focus:outline-none p-2 space-y-4 bg-gohan shadow-moon-md moon-search-list rounded-b-moon-s-sm ease-out duration-300 opacity-0 scale-95"
              tabindex="-1"
            >
              <ul
                class="min-w-full space-y-1"
                tabindex="-1"
              >
                <li>
                  <h5
                    class="text-bulma text-sm font-medium px-2 py-1"
                  >
                    Home
                  </h5>
                  <button
                    aria-disabled="false"
                    class="moon-search-list-item w-full"
                    data-close-on-select="true"
                  >
                    <a
                      href="#home"
                    >
                      <button
                        class="flex gap-2 justify-between items-center p-2 rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full bg-bulma/[0.04]"
                        type="button"
                      >
                        <span
                          class="block grow text-start text-bulma overflow-hidden"
                        >
                          Home
                        </span>
                        <span
                          class="text-moon-12 text-trunks"
                        >
                          #home
                        </span>
                      </button>
                    </a>
                  </button>
                  <button
                    aria-disabled="false"
                    class="moon-search-list-item w-full"
                    data-close-on-select="true"
                  >
                    <a
                      href="#settings"
                    >
                      <button
                        class="flex gap-2 justify-between items-center p-2 bg-transparent rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full"
                        type="button"
                      >
                        <span
                          class="block grow text-start text-bulma overflow-hidden"
                        >
                          Settings
                        </span>
                        <span
                          class="text-moon-12 text-trunks"
                        >
                          #settings
                        </span>
                      </button>
                    </a>
                  </button>
                  <button
                    aria-disabled="false"
                    class="moon-search-list-item w-full"
                    data-close-on-select="false"
                  >
                    <button
                      class="flex gap-2 justify-between items-center p-2 bg-transparent rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full"
                      type="button"
                    >
                      <span
                        class="block grow text-start text-bulma overflow-hidden"
                      >
                        Projects
                      </span>
                      <span
                        class="text-moon-12 text-trunks"
                      >
                        Action
                      </span>
                    </button>
                  </button>
                </li>
              </ul>
              <ul
                class="min-w-full space-y-1"
                tabindex="-1"
              >
                <li>
                  <h5
                    class="text-bulma text-sm font-medium px-2 py-1"
                  >
                    Other
                  </h5>
                  <button
                    aria-disabled="false"
                    class="moon-search-list-item w-full"
                    data-close-on-select="true"
                  >
                    <a
                      href="#developer-settings"
                    >
                      <button
                        class="flex gap-2 justify-between items-center p-2 bg-transparent rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full"
                        type="button"
                      >
                        <span
                          class="block grow text-start text-bulma overflow-hidden"
                        >
                          Developer settings
                        </span>
                        <span
                          class="text-moon-12 text-trunks"
                        >
                          #developer-settings
                        </span>
                      </button>
                    </a>
                  </button>
                  <button
                    aria-disabled="false"
                    class="moon-search-list-item w-full"
                    data-close-on-select="true"
                  >
                    <a
                      href="#privacy-policy"
                    >
                      <button
                        class="flex gap-2 justify-between items-center p-2 bg-transparent rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full"
                        type="button"
                      >
                        <span
                          class="block grow text-start text-bulma overflow-hidden"
                        >
                          Privacy policy
                        </span>
                        <span
                          class="text-moon-12 text-trunks"
                        >
                          #privacy-policy
                        </span>
                      </button>
                    </a>
                  </button>
                  <button
                    aria-disabled="false"
                    class="moon-search-list-item w-full"
                    data-close-on-select="true"
                  >
                    <button
                      class="flex gap-2 justify-between items-center p-2 bg-transparent rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full"
                      type="button"
                    >
                      <span
                        class="block grow text-start text-bulma overflow-hidden"
                      >
                        Log out
                      </span>
                      <span
                        class="text-moon-12 text-trunks"
                      >
                        Action
                      </span>
                    </button>
                  </button>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Search renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="w-full xl:mx-32"
      >
        <div>
          <div
            class="relative w-full h-full bg-gohan flex flex-col divide-y dark:divide-beerus rounded-t-moon-s-sm"
          >
            <div
              class="flex items-center space-x-1.5 pl-3 moon-search-input"
            >
              <svg
                class="w-6 h-6 pointer-events-none text-bulma"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M25 25l-4.413-4.405m0 0A7.962 7.962 0 109.336 9.327a7.962 7.962 0 0011.251 11.268z"
                  stroke="currentColor"
                  stroke-linecap="round"
                />
              </svg>
              <div
                class="flex-1 relative"
              >
                <input
                  class="py-2 px-0 border-0 w-full focus:outline-none focus:border-0 focus:ring-0 bg-transparent placeholder-bulma text-bulma"
                  id="moon-search-input"
                  placeholder="Search"
                  spellcheck="false"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="absolute z-1 top-10 w-full flex-1 focus:outline-none p-2 space-y-4 bg-gohan shadow-moon-md moon-search-list rounded-b-moon-s-sm ease-out duration-300 opacity-0 scale-95"
              tabindex="-1"
            >
              <ul
                class="min-w-full space-y-1"
                tabindex="-1"
              >
                <li>
                  <h5
                    class="text-bulma text-sm font-medium px-2 py-1"
                  >
                    Home
                  </h5>
                  <button
                    aria-disabled="false"
                    class="moon-search-list-item w-full"
                    data-close-on-select="true"
                  >
                    <a
                      href="#home"
                    >
                      <button
                        class="flex gap-2 justify-between items-center p-2 rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full bg-bulma/[0.04]"
                        type="button"
                      >
                        <span
                          class="block grow text-start text-bulma overflow-hidden"
                        >
                          Home
                        </span>
                        <span
                          class="text-moon-12 text-trunks"
                        >
                          #home
                        </span>
                      </button>
                    </a>
                  </button>
                  <button
                    aria-disabled="false"
                    class="moon-search-list-item w-full"
                    data-close-on-select="true"
                  >
                    <a
                      href="#settings"
                    >
                      <button
                        class="flex gap-2 justify-between items-center p-2 bg-transparent rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full"
                        type="button"
                      >
                        <span
                          class="block grow text-start text-bulma overflow-hidden"
                        >
                          Settings
                        </span>
                        <span
                          class="text-moon-12 text-trunks"
                        >
                          #settings
                        </span>
                      </button>
                    </a>
                  </button>
                  <button
                    aria-disabled="false"
                    class="moon-search-list-item w-full"
                    data-close-on-select="false"
                  >
                    <button
                      class="flex gap-2 justify-between items-center p-2 bg-transparent rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full"
                      type="button"
                    >
                      <span
                        class="block grow text-start text-bulma overflow-hidden"
                      >
                        Projects
                      </span>
                      <span
                        class="text-moon-12 text-trunks"
                      >
                        Action
                      </span>
                    </button>
                  </button>
                </li>
              </ul>
              <ul
                class="min-w-full space-y-1"
                tabindex="-1"
              >
                <li>
                  <h5
                    class="text-bulma text-sm font-medium px-2 py-1"
                  >
                    Other
                  </h5>
                  <button
                    aria-disabled="false"
                    class="moon-search-list-item w-full"
                    data-close-on-select="true"
                  >
                    <a
                      href="#developer-settings"
                    >
                      <button
                        class="flex gap-2 justify-between items-center p-2 bg-transparent rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full"
                        type="button"
                      >
                        <span
                          class="block grow text-start text-bulma overflow-hidden"
                        >
                          Developer settings
                        </span>
                        <span
                          class="text-moon-12 text-trunks"
                        >
                          #developer-settings
                        </span>
                      </button>
                    </a>
                  </button>
                  <button
                    aria-disabled="false"
                    class="moon-search-list-item w-full"
                    data-close-on-select="true"
                  >
                    <a
                      href="#privacy-policy"
                    >
                      <button
                        class="flex gap-2 justify-between items-center p-2 bg-transparent rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full"
                        type="button"
                      >
                        <span
                          class="block grow text-start text-bulma overflow-hidden"
                        >
                          Privacy policy
                        </span>
                        <span
                          class="text-moon-12 text-trunks"
                        >
                          #privacy-policy
                        </span>
                      </button>
                    </a>
                  </button>
                  <button
                    aria-disabled="false"
                    class="moon-search-list-item w-full"
                    data-close-on-select="true"
                  >
                    <button
                      class="flex gap-2 justify-between items-center p-2 bg-transparent rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full"
                      type="button"
                    >
                      <span
                        class="block grow text-start text-bulma overflow-hidden"
                      >
                        Log out
                      </span>
                      <span
                        class="text-moon-12 text-trunks"
                      >
                        Action
                      </span>
                    </button>
                  </button>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="w-full xl:mx-32"
    >
      <div>
        <div
          class="relative w-full h-full bg-gohan flex flex-col divide-y dark:divide-beerus rounded-t-moon-s-sm"
        >
          <div
            class="flex items-center space-x-1.5 pl-3 moon-search-input"
          >
            <svg
              class="w-6 h-6 pointer-events-none text-bulma"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 25l-4.413-4.405m0 0A7.962 7.962 0 109.336 9.327a7.962 7.962 0 0011.251 11.268z"
                stroke="currentColor"
                stroke-linecap="round"
              />
            </svg>
            <div
              class="flex-1 relative"
            >
              <input
                class="py-2 px-0 border-0 w-full focus:outline-none focus:border-0 focus:ring-0 bg-transparent placeholder-bulma text-bulma"
                id="moon-search-input"
                placeholder="Search"
                spellcheck="false"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="absolute z-1 top-10 w-full flex-1 focus:outline-none p-2 space-y-4 bg-gohan shadow-moon-md moon-search-list rounded-b-moon-s-sm ease-out duration-300 opacity-0 scale-95"
            tabindex="-1"
          >
            <ul
              class="min-w-full space-y-1"
              tabindex="-1"
            >
              <li>
                <h5
                  class="text-bulma text-sm font-medium px-2 py-1"
                >
                  Home
                </h5>
                <button
                  aria-disabled="false"
                  class="moon-search-list-item w-full"
                  data-close-on-select="true"
                >
                  <a
                    href="#home"
                  >
                    <button
                      class="flex gap-2 justify-between items-center p-2 rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full bg-bulma/[0.04]"
                      type="button"
                    >
                      <span
                        class="block grow text-start text-bulma overflow-hidden"
                      >
                        Home
                      </span>
                      <span
                        class="text-moon-12 text-trunks"
                      >
                        #home
                      </span>
                    </button>
                  </a>
                </button>
                <button
                  aria-disabled="false"
                  class="moon-search-list-item w-full"
                  data-close-on-select="true"
                >
                  <a
                    href="#settings"
                  >
                    <button
                      class="flex gap-2 justify-between items-center p-2 bg-transparent rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full"
                      type="button"
                    >
                      <span
                        class="block grow text-start text-bulma overflow-hidden"
                      >
                        Settings
                      </span>
                      <span
                        class="text-moon-12 text-trunks"
                      >
                        #settings
                      </span>
                    </button>
                  </a>
                </button>
                <button
                  aria-disabled="false"
                  class="moon-search-list-item w-full"
                  data-close-on-select="false"
                >
                  <button
                    class="flex gap-2 justify-between items-center p-2 bg-transparent rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full"
                    type="button"
                  >
                    <span
                      class="block grow text-start text-bulma overflow-hidden"
                    >
                      Projects
                    </span>
                    <span
                      class="text-moon-12 text-trunks"
                    >
                      Action
                    </span>
                  </button>
                </button>
              </li>
            </ul>
            <ul
              class="min-w-full space-y-1"
              tabindex="-1"
            >
              <li>
                <h5
                  class="text-bulma text-sm font-medium px-2 py-1"
                >
                  Other
                </h5>
                <button
                  aria-disabled="false"
                  class="moon-search-list-item w-full"
                  data-close-on-select="true"
                >
                  <a
                    href="#developer-settings"
                  >
                    <button
                      class="flex gap-2 justify-between items-center p-2 bg-transparent rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full"
                      type="button"
                    >
                      <span
                        class="block grow text-start text-bulma overflow-hidden"
                      >
                        Developer settings
                      </span>
                      <span
                        class="text-moon-12 text-trunks"
                      >
                        #developer-settings
                      </span>
                    </button>
                  </a>
                </button>
                <button
                  aria-disabled="false"
                  class="moon-search-list-item w-full"
                  data-close-on-select="true"
                >
                  <a
                    href="#privacy-policy"
                  >
                    <button
                      class="flex gap-2 justify-between items-center p-2 bg-transparent rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full"
                      type="button"
                    >
                      <span
                        class="block grow text-start text-bulma overflow-hidden"
                      >
                        Privacy policy
                      </span>
                      <span
                        class="text-moon-12 text-trunks"
                      >
                        #privacy-policy
                      </span>
                    </button>
                  </a>
                </button>
                <button
                  aria-disabled="false"
                  class="moon-search-list-item w-full"
                  data-close-on-select="true"
                >
                  <button
                    class="flex gap-2 justify-between items-center p-2 bg-transparent rounded-moon-i-sm text-moon-14 text-bulma focus:outline-none focus:shadow-focus cursor-pointer hover:bg-bulma/[0.04] transition w-full"
                    type="button"
                  >
                    <span
                      class="block grow text-start text-bulma overflow-hidden"
                    >
                      Log out
                    </span>
                    <span
                      class="text-moon-12 text-trunks"
                    >
                      Action
                    </span>
                  </button>
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
